improve and annotate custom triplot
In response to issue #2

--- a/pres-en/workshop10-pres-en.Rmd
+++ b/pres-en/workshop10-pres-en.Rmd
@@ -280,6 +280,7 @@ Let's use the .alert[Hellinger] transformation:
 library(vegan)
 spe.hel <- decostand(spe, method = "hellinger")
 ```
+
 ---
 # Exploring the environmental dataset
 
@@ -295,6 +296,7 @@ For a closer look at the objects (environmental variables):
 str(env) # structure of objects in dataset
 summary(env) # summary statistics for all objects (min, mean, max, etc.)
 ```
+
 ---
 # Collinearity
 .small[
@@ -503,45 +505,69 @@ ordiplot(spe.rda.signif,
 * Arrows pointing in the .alert[same direction] have a positive relationship
 ]
 ]
+
 ---
 # Customizing RDA plots
 
-Both plot() and ordiplot() make quick and simple ordination plots, but you can customize your plots by manually setting the aesthetics of points, text, and arrows.
+Both `plot()` and `ordiplot()` make quick and simple ordination plots, but you can customize your plots by extracting scores with `scores()` and manually setting the aesthetics of `points()`, `text()`, and `arrows()`.
 
 ```{r, echo = FALSE}
 ## extract % explained
 perc <- round(100*(summary(spe.rda.signif)$cont$importance[2, 1:2]), 2)
-## scores
+
+## extract scores
 sc_si <- scores(spe.rda.signif, display="sites", choices=c(1,2), scaling=1)
 sc_sp <- scores(spe.rda.signif, display="species", choices=c(1,2), scaling=1)
 sc_bp <- scores(spe.rda.signif, display="bp", choices=c(1, 2), scaling=1)
-## plot
+
+## Custom triplot, step by step
+
+# Set up a blank plot with scaling, axes, and labels
 plot(spe.rda.signif,
-     scaling=1, 
-     main="Triplot RDA - scaling 1", 
-     type="none", 
-     frame = F,
-     xlab=paste0("RDA1 (", perc[1], "%)"), 
-     ylab = paste0("RDA2 (", perc[2], "%)"), 
-     xlim=c(-1,1), 
-     ylim=c(-1,1))
+     scaling = 1, # set scaling type 
+     type = "none", # this excludes the plotting of any points from the results
+     frame = FALSE,
+     # set axis limits
+     xlim = c(-1,1), 
+     ylim = c(-1,1),
+     # label the plot (title, and axes)
+     main = "Triplot RDA - scaling 1",
+     xlab = paste0("RDA1 (", perc[1], "%)"), 
+     ylab = paste0("RDA2 (", perc[2], "%)") 
+)
+# add points for site scores
 points(sc_si, 
-       pch=21, 
-       col="black", 
-       bg="steelblue",
-       cex=1.2)
+       pch = 21, # set shape (here, circle with a fill colour)
+       col = "black", # outline colour
+       bg = "steelblue", # fill colour
+       cex = 1.2) # size
+# add points for species scores
 points(sc_sp, 
-       pch=22, 
-       col="black",
+       pch = 22, # set shape (here, square with a fill colour)
+       col = "black",
        bg = "#f2bd33", 
-       cex=1.2)
-text(sc_sp, labels = rownames(sc_sp), col="black", cex=0.6)
-arrows(0,0,
-       sc_bp[,1], sc_bp[,2], col="red", lwd = 3)
-text(x = sc_bp[,1] -0.1, y = sc_bp[,2] - 0.03, labels=rownames(sc_bp), col="red", cex=1, font = 2)
+       cex = 1.2)
+# add text labels for species abbreviations
+text(sc_sp + c(0.03, 0.09), # adjust text coordinates to avoid overlap with points 
+     labels = rownames(sc_sp), 
+     col = "grey40", 
+     font = 2, # bold
+     cex = 0.6)
+# add arrows for effects of the expanatory variables
+arrows(0,0, # start them from (0,0)
+       sc_bp[,1], sc_bp[,2], # end them at the score value
+       col = "red", 
+       lwd = 3)
+# add text labels for arrows
+text(x = sc_bp[,1] -0.1, # adjust text coordinate to avoid overlap with arrow tip
+     y = sc_bp[,2] - 0.03, 
+     labels = rownames(sc_bp), 
+     col = "red", 
+     cex = 1, 
+     font = 2)
 ```
 
-See the wiki page for more details!
+See Workshop 10's script or the [book](https://qcbsrworkshops.github.io/workshop10/book-en/index.html) for more details!
 
 ---
 # Challenge 1 ![:cube]()
