--- a/pres-fr/workshop10-pres-fr.Rmd
+++ b/pres-fr/workshop10-pres-fr.Rmd
@@ -28,16 +28,40 @@ knitr::opts_chunk$set(
 options(repos=structure(c(CRAN="http://cran.r-project.org")))
 ```
 
+```{r output-lines, echo = FALSE}
+library(knitr)
+hook_output <- knit_hooks$get("output")
+knit_hooks$set(output = function(x, options) {
+   lines <- options$output.lines
+   if (is.null(lines)) {
+     return(hook_output(x, options))  # pass to default hook
+   }
+   x <- unlist(strsplit(x, "\n"))
+   more <- "..."
+   if (length(lines)==1) {        # first n lines
+     if (length(x) > lines) {
+       # truncate the output, but add ....
+       x <- c(head(x, lines), more)
+     }
+   } else {
+     x <- c(more, x[lines], more)
+   }
+   # paste these lines together
+   x <- paste(c(x, ""), collapse = "\n")
+   hook_output(x, options)
+ })
+```
+
+
 class: inverse, center, middle
 
 ```{r install_pkgs, message=FALSE, warning=FALSE, include=FALSE, results=0}
 # Standard procedure to check and install packages and their dependencies, if needed.
 
 # remotes::install_github("cran/mvpart")
-# remotes::install_github("cran/MVPARTwrap")
 
 list.of.packages <- c("remotes", "Hmisc", "labdsv", "MASS", "vegan"
-                      #, "MVPARTwrap", "mvpart"
+                      #"mvpart"
                       )
 
 new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
@@ -96,10 +120,8 @@ install.packages(c('Hmisc', 'labdsv', 'MASS', 'vegan'))
 ???
 
 Paquets non-utilisés dans la version de 3 heures
-[`MVPARTwrap`](https://cran.r-project.org/package=MVPARTwrap)
 [`mvpart`](https://cran.r-project.org/package=mvpart)
 remotes::install_github("cran/mvpart")
-remotes::install_github("cran/MVPARTwrap")
 
 ---
 # Objectifs d'apprentissage
@@ -176,7 +198,6 @@ Assurez-vous d'installer et d'importer les librairies suivantes dans R Studio (p
 
 ???
 .comment[mvpart] package .alert[(voir code R)]
-.comment[MVPARTwrap] package .alert[(voir code R)]
 
 ---
 # Suivre l'atelier
